Make images' background white to ensure SVG images have readable details on them

--- a/components/Picture/Picture.module.css
+++ b/components/Picture/Picture.module.css
@@ -14,6 +14,7 @@
 
 .picture img {
   max-width: 100%;
+  background-color: white;
 }
 
 .picture figcaption {
